FLUID RECOMMENDATIONS 1. Using native table html element for tabular data and removing all div elements and relating style definition used to create tabular view 2. Spacing between search field and display buttons is corrected 3. Tag search text color in the nav panel changed from white to default 4. Ellipsis icon for inline action buttons is modified as per the style guide 5. Background color for tiles in the grid view is modified as per the style guide. Also replaced hard-coded colors to colors from the variable defined.

--- a/dp-web/src/app/modules/dataset/views/dashboard/dataset-dashboard.component.scss
+++ b/dp-web/src/app/modules/dataset/views/dashboard/dataset-dashboard.component.scss
@@ -7,7 +7,7 @@
 .search-input {
   position: relative;
   display: inline-block;
-  margin-right: 6px;
+  margin-right: 10px;
   width: 250px;
   box-sizing: border-box;
   input {
