--- a/dp-web/src/app/modules/dataset/views/dashboard/nav-tag-panel/nav-tag-panel.component.scss
+++ b/dp-web/src/app/modules/dataset/views/dashboard/nav-tag-panel/nav-tag-panel.component.scss
@@ -28,7 +28,6 @@
   border-width: 0px;
   background-color: transparent;
   outline: none;
-  color:white;
   font-size: 14px;
 }
 .nav-tag-panel .tag-search .fa-search{
